--- a/views/userViews/orderStatus.hbs
+++ b/views/userViews/orderStatus.hbs
@@ -945,8 +945,8 @@
                     cancelBtnElement.style.display = 'none'
                     cancelledBtnElement.style.display = 'block'
                     Swal.fire({
-                        title: "Deleted!",
-                        text: "Your file has been deleted.",
+                        title: "Cancelled!",
+                        text: "Your order has been cancelled.",
                         icon: "success"
                     });
                 }
