--- a/views/userViews/orderPlacedPage.hbs
+++ b/views/userViews/orderPlacedPage.hbs
@@ -718,8 +718,8 @@
                 <div class="row userInfo">
                     <div class="thanxContent text-center">
                         <h1>
-                            Thank you for your order <a
-                                href="/account/orderList/orderStatus/{{orderData._id}}">#{{orderData.orderNumber}}</a>
+                            Thank you for your order
+                            <a href="/account/orderList/orderStatus/{{orderData._id}}">#{{orderData.orderNumber}}</a>
                         </h1>
                         <h4>we'll let you know when your items are on their way</h4>
                     </div>
