--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -10,14 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    {{!-- cropper js --}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.1/cropper.min.js"
-        integrity="sha512-9KkIqdfN7ipEW6B6k+Aq20PV31bjODg4AA52W+tYtAE0jE0kMx49bjJ3FgvS56wzmyfMUHbQ4Km2b7l9+Y/+Eg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 
 <body>
     <div class="container">
+
         <nav class="navbar navbar-expand-lg bg-info bg-primary">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -50,6 +48,7 @@
                 </div>
             </div>
         </nav>
+
         <div class="container pt-3">
             <div class="row">
                 {{!-- user count --}}
@@ -57,7 +56,8 @@
                     <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
                         <div class="card-header">Your Products Count</div>
                         <div class="card-body">
-                            <h5 class="card-title">{{productsCount}}</h5>
+                            <h5 id="productsCount" class="card-title"></h5>
+                            <h6 id="categoryCount"></h6>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                     <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
                         <div class="card-header">Completed Orders</div>
                         <div class="card-body">
-                            <h5 class="card-title">{{completedOrdersCount}}</h5>
+                            <h5 id="completedOrdersCount" class="card-title"></h5>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
                         <div class="card-header">Pending Orders</div>
                         <div class="card-body">
-                            <h5 class="card-title">{{pendingOrdersCount}}</h5>
+                            <h5 id="pendingOrdersCount" class="card-title"></h5>
                         </div>
                     </div>
                 </div>
@@ -81,65 +81,19 @@
                     <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
                         <div class="card-header">Today's Revenue</div>
                         <div class="card-body">
-                            <h5 class="card-title">₹{{currentDayRevenue}}</h5>
+                            <h5 id="currentDayRevenue" class="card-title"></h5>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <canvas id="myChart"></canvas>
+                    <canvas id="twoWeeksSalesChart"></canvas>
                 </div>
-
-                <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-                <script>
-                    const fetchDataAndRenderChart = async () => {
-                        const response = await fetch('/admin/dashboardData'); // Replace with the actual endpoint
-                        const data = await response.json();
-
-                        console.log(data);
-
-                        const ctx = document.getElementById('myChart');
-                        new Chart(ctx, {
-                            type: 'bar',
-                            data: {
-                                labels: data.date,
-                                datasets: [{
-                                    label: '# of Votes',
-                                    data: data.revenue,
-                                    borderWidth: 1
-                                }]
-                            },
-                            options: {
-                                scales: {
-                                    y: {
-                                        beginAtZero: true
-                                    }
-                                }
-                            }
-                        });
-                    }
-
-                    fetchDataAndRenderChart();
-                </script>
-
-
+                <div class="col-lg-6">
+                    <canvas id="categoryWiseRevenueChart"></canvas>
+                </div>
             </div>
-            {{!-- <div class="row">
-                <div class="col-lg-6">
-                    <div id="chart">
-                        <h3 style="padding: 12px;vfont-weight: bold; color: darkblue;">Total Revenue</h3>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="charts-section mt-6">
-                        <div id="piechart" class="col-6 d-flex flex-column mt-1">
-                            <h3 style="padding: 7px;font-weight: bold; color: darkblue;">Payment Method </h3>
-                        </div>
-                    </div>
-                </div>
-            </div> --}}
         </div>
 
         {{!-- Banner Image --}}
@@ -147,7 +101,8 @@
             <p class="h1">Upload LFKart Banner Image</p>
 
             <div class="input-group mb-3">
-                <img id="previewBannerImg" src="" style="width: 480px; height: 212px; " alt="Img">
+                <img id="previewBannerImg" src="" style="width: 480px; height: 212px; " alt="Img"
+                    onchange="cropImage()">
                 <div class="input-group mb-3">
                     <input id="bannerImage" name="productImage1" type="file" class="form-control"
                         placeholder="Product Image1" onchange="displayImage()">
@@ -174,27 +129,96 @@
             }
         </script>
         {{!-- cropperjs --}}
+        {{!-- cropper js --}}
+        <script src="../node_modules/cropperjs/dist/cropper.js"></script>
+
         <script>
-            const previewBannerImgElement = document.getElementById('previewBannerImg')
-            const cropper = new Cropper(previewBannerImgElement, {
-                aspectRatio: 0,
-                viewMode: 0
-            })
+                console.log('vannu')
+                const previewBannerImgElement = document.getElementById('previewBannerImg');
+                const cropper = new Cropper(previewBannerImgElement, {
+                    aspectRatio: 16 / 9,
+                    crop(event) {
+                        console.log(event.detail.x);
+                        console.log(event.detail.y);
+                        console.log(event.detail.width);
+                        console.log(event.detail.height);
+                        console.log(event.detail.rotate);
+                        console.log(event.detail.scaleX);
+                        console.log(event.detail.scaleY);
+                    },
+                });
+                Cropper.setDefaults(options)
         </script>
 
-        {{!-- fetch all data for dashboard --}}
-        <script>
-            var fetchLandingPageData = async () => {
-                const response = await fetch('/admin/dashboardData', { method: 'GET' })
-                var data = await response.json()
-                console.log(data)
-                console.log(data.fourteenDaysRevenue)
-            }()
-        </script>
 
+        {{!-- Charts --}}
+
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+        <script>
+            const fetchData = (async () => {
+                try {
+                    const response = await fetch('/admin/dashboardData', { method: 'GET' });
+                    const data = await response.json();
+                    const {
+                        productsCount,
+                        categoryCount,
+                        pendingOrdersCount,
+                        completedOrdersCount,
+                        currentDayRevenue,
+                        fourteenDaysRevenue,
+                        categoryWiseRevenue
+                    } = data
+
+                    document.getElementById('productsCount').innerText = productsCount
+                    document.getElementById('categoryCount').innerText = 'in ' + categoryCount + ' categories'
+                    document.getElementById('pendingOrdersCount').innerText = pendingOrdersCount
+                    document.getElementById('completedOrdersCount').innerText = completedOrdersCount
+                    document.getElementById('currentDayRevenue').innerText = '₹' + currentDayRevenue
+
+                    const twoWeeksSalesChartElement = document.getElementById('twoWeeksSalesChart');
+                    const twoWeeksSalesChartOptions = {
+                        type: 'line',
+                        data: {
+                            labels: fourteenDaysRevenue.date,
+                            datasets: [{
+                                label: 'Last 2 weeks revenue per day',
+                                data: fourteenDaysRevenue.revenue,
+                                borderWidth: 1
+                            }]
+                        },
+                        options: {
+                            scales: { y: { beginAtZero: true } }
+                        }
+                    }
+
+                    const categoryWiseRevenueChartElement = document.getElementById('categoryWiseRevenueChart');
+                    const categoryWiseRevenueChartOptions = {
+                        type: 'polarArea',
+                        data: {
+                            labels: categoryWiseRevenue.categoryName,
+                            datasets: [{
+                                data: categoryWiseRevenue.revenuePerCategory,
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 0.5)',
+                                    'rgba(75, 192, 192, 0.5)',
+                                    'rgba(255, 255, 0, 0.5)',
+                                    'rgba(169, 169, 169, 0.5)',
+                                    'rgba(0, 0, 255, 0.5)'
+                                ]
+                            }]
+                        }
+                    }
+
+                    new Chart(twoWeeksSalesChartElement, twoWeeksSalesChartOptions);
+                    new Chart(categoryWiseRevenueChartElement, categoryWiseRevenueChartOptions);
+                } catch (error) {
+                    console.error(error)
+                }
+            })();
+        </script>
 
     </allScripts>
-
 
 </body>
 
