--- a/views/userViews/changePassword.hbs
+++ b/views/userViews/changePassword.hbs
@@ -707,8 +707,9 @@
                   <label>New Password</label>
                   <input required id="password" minlength="5" maxlength="12"
                     title="Please enter your new password, between 5 and 12 characters" type="tel" class="form-control"
-                    placeholder="Password">
+                    placeholder="Password" onkeyup="checkPasswordStrength();">
                 </div>
+                <div id="password-strength-status"></div>
                 <div class="form-group">
                   <label>Confirm New Password</label>
                   <input required minlength="5" title="Passwords doesn't match" id="confirmPass" type="password"
@@ -788,6 +789,9 @@
         });
       });
     </script>
+
+  
+
 
     <script>
       async function changePassword() {
