--- a/views/userViews/shop.hbs
+++ b/views/userViews/shop.hbs
@@ -880,22 +880,20 @@
 
                 <!--/.categoryProduct || product content end-->
 
-                {{!-- <div class="w100 categoryFooter">
+                <div class="w100 categoryFooter">
                     <div class="pagination pull-left no-margin-top">
                         <ul class="pagination no-margin-top">
-                            <li><a href="#">«</a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li><a href="#">»</a></li>
+                            {{!-- <li><a href="#">«</a></li> --}}
+                            {{#each pagination}}
+                            <li class="active"><a href="/shop?{{sum @index 1}}">{{sum @index 1}}</a></li>
+                            {{/each}}
+                            {{!-- <li><a href="#">»</a></li> --}}
                         </ul>
                     </div>
                     <div class="pull-right pull-right col-sm-4 col-xs-12 no-padding text-right text-left-xs">
                         <p>Showing 1–450 of 12 results</p>
                     </div>
-                </div> --}}
+                </div> 
                 <!--/.categoryFooter-->
             </div>
             <!--/right column end-->
