--- a/views/adminViews/salesReport.hbs
+++ b/views/adminViews/salesReport.hbs
@@ -8,11 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="container">
 
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-info bg-primary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
@@ -23,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item fw-bold">
-                        <a class="nav-link active" aria-current="page" href="/admin/userManagement">User Management</a>
+                        <a class="nav-link" aria-current="page" href="/admin/userManagement">User Management</a>
                     </li>
                     <li class="nav-item fw-bold">
                         <a class="nav-link" aria-current="page" href="/admin/categoryManagement">Categories</a>
@@ -32,7 +34,7 @@
                         <a class="nav-link" aria-current="page" href="/admin/productManagement">Products</a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/orders">Orders</a>
+                        <a class="nav-link active" aria-current="page" href="/admin/orders">Orders</a>
                     </li>
                     <li class="nav-item fw-bold">
                         <a class="nav-link" aria-current="page" href="/admin/SalesReport">Sales Report</a>
@@ -45,57 +47,66 @@
         </div>
     </nav>
 
-    <!-- User Management Table -->
     <div class="container pt-3">
         <table id="example" class="display" style="width:100%">
             <thead>
                 <tr>
-                    <th>Username</th>
-                    <th>Email</th>
-                    <th>Phone Number</th>
-                    <th>Actions</th>
+                    <th scope="col" class="border-dark">S No</th>
+                    <th scope="col" class="border-dark">Order id</th>
+                    <th scope="col" class="border-dark">Username</th>
+                    <th scope="col" class="border-dark">Date</th>
+                    <th scope="col" class="border-dark">Products</th>
+                    <th scope="col" class="border-dark">No of items</th>
+                    <th scope="col" class="border-dark">TotalCost</th>
+                    <th scope="col" class="border-dark">Payment Method</th>
+                    <th scope="col" class="border-dark">Status</th>
                 </tr>
             </thead>
             <tbody>
-                {{#each allUsersData}}
+                {{#each salesData}}
                 <tr>
-                    <td>{{this.username}}</td>
-                    <td>{{this.email}}</td>
-                    <td>{{this.phonenumber}}</td>
-                    {{#if this.isBlocked}}
+                    <td>{{sum @index 1}}</td>
+                    <td>{{this._id}}</td>
+                    <td>{{this.userId.username}}</td>
+                    <td>{{this.orderDateFormatted}}</td>
                     <td>
-                        <form action="/admin/userManagement/unBlock/{{this._id}}" method="POST">
-                            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to unblock {{this.username}}?')">Unblock</button>
-                        </form>
+                        <ul>
+                            {{#each this.cartData}}
+                            <li>{{this.productId.productName}}</li>
+                            {{/each}}
+                        </ul>
                     </td>
-                    {{else}}
                     <td>
-                        <form action="/admin/userManagement/block/{{this._id}}" method="POST">
-                            <button type="submit" class="btn btn-success" onclick="return confirm('Are you sure you want to block {{this.username}}?')">Block</button>
-                        </form>
+                        <ul>
+                            {{#each this.cartData}}
+                            <li>{{this.productQuantity}}</li>
+                            {{/each}}
+                        </ul>
+
                     </td>
-                    {{/if}}
+                    <td>₹{{this.grandTotalCost}}</td>
+                    <td>{{this.paymentType}}</td>
+                    <td>{{this.orderStatus}}</td>
                 </tr>
                 {{/each}}
             </tbody>
-            <tfoot>
-                <tr>
-                    <th>Username</th>
-                    <th>Email</th>
-                    <th>Phone Number</th>
-                    <th>Actions</th>
-                </tr>
-            </tfoot>
         </table>
     </div>
+
 
 </body>
 
 <allScripts>
-
-    {{!-- datatables.net --}}
+    {{!-- jquery --}}
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+    {{!-- datatables.net --}}
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
 
     {{!-- Table details --}}
