bugFix/forgotPassword/otpBug

--- a/views/userViews/forgotPasswordPage2.hbs
+++ b/views/userViews/forgotPasswordPage2.hbs
@@ -180,8 +180,8 @@
 
 
                 <li class="dropdown hasUserMenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                    aria-expanded="false"> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> Hi, {{currentUser.username}} <b
-                      class="caret"></b></a>
+                    aria-expanded="false"> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> Hi,
+                    {{currentUser.username}} <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="/account"> <i class="fa fa-user"></i> Account</a></li>
                     <li><a href="account.html"><i class="fa fa fa-cog"></i> Profile</a></li>
@@ -192,7 +192,10 @@
                         My wishlists
                       </a></li>
                     <li class="divider"></li>
-                    <li><form action="/logout" method="POST"><i class="fa  fa-sign-out"></i><button type="submit">Log Out</button></form></li>
+                    <li>
+                      <form action="/logout" method="POST"><i class="fa  fa-sign-out"></i><button type="submit">Log
+                          Out</button></form>
+                    </li>
                   </ul>
                 </li>
 
@@ -702,29 +705,32 @@
               <div class="form-group">
                 <label>OTP</label>
                 <input title="Invalid OTP" type="tel" class="form-control" placeholder="Enter OTP" required
-                  data-rule-equalTo="#OTP">
+                  data-rule-equalTo="#OTP" >
               </div>
               <div class="form-group">
-                <label>Time Left: </label> 
+                <label>Time Left: </label>
                 <span>
                   <h4 id="timer"></h4>Seconds left
                 </span>
               </div>
-              <button type="submit" class="btn btn-primary"><i class="fa fa-user"></i>Confirm OTP</button>
+              <button type="submit" id="verifyOTP" class="btn btn-primary"><i class="fa fa-user"></i>Confirm OTP</button>
+            </form>
+            <form  action="/resendOTP" method="POST">
+              <button id="ResendOTP" type="submit" class="btn btn-danger" style="display: none;"> Resend OTP</button>
             </form>
           </div>
         </div>
         <script>
           let a = 60
           h = document.getElementById('timer')
-          let otpTimer = setInterval((){
+          let otpTimer = setInterval(() => {
             h.innerText = a--
-            if (a === 0) {
+            if (a === -1) {
               clearInterval(otpTimer);
+              verifyOTP.style.display = 'none'
+              ResendOTP.style.display = 'block'
             }
           }, 1000)
-          if (a == 0)
-            clearInterval(otpTimer)
         </script>
         <!--/row end-->
 
